--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 .config/OpenVPN/
 .config/coc/
 .config/gtk-2.0/
-.config/iterm2/
+.config/iterm2/AppSupport
+.config/iterm2/sockets
+.config/iterm2/.DS_Store
 .config/sketchybar/
 .config/wireshark/
