Added new ignores

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 
 //Ignoring unneeded files in .config
+.config/nvim.bak/
 
 .config/.DS_Store
 .config/Autodesk/
 .config/OpenVPN/
 .config/coc/
+.config/github_copilot/
 .config/gtk-2.0/
 .config/iterm2/AppSupport
 .config/iterm2/sockets
