--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 .config/Autodesk/
 .config/OpenVPN/
 .config/coc/
-.config/github_copilot/
+.config/github-copilot/
 .config/gtk-2.0/
 .config/iterm2/AppSupport
 .config/iterm2/sockets
