customized tmux config

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -15,8 +15,12 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# Enable mouse mode (tmux 2.1 and above)
+set -g mouse on
+set -g mouse-select-pane on
+
 # reload config file (change file location to your the tmux.conf you want to use)
-bind r source-file ~/.config/tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf
 
 # don't rename windows automatically
 set-option -g allow-rename off
@@ -34,11 +38,11 @@ set -g bell-action none
 setw -g clock-mode-color yellow
 
 # copy mode
-setw -g mode-style 'fg=black bg=red bold'
+setw -g mode-style 'fg=black bg=blue bold'
 
 # panes
 set -g pane-border-style 'fg=blue'
-set -g pane-active-border-style 'fg=yellow'
+set -g pane-active-border-style 'fg=green'
 
 # statusbar
 set -g status-position top
@@ -48,17 +52,17 @@ set -g status-style 'fg=lightblue'
 set -g status-left ''
 set -g status-left-length 10
 
-set -g status-right-style 'fg=black bg=yellow'
+set -g status-right-style 'fg=black bg=violet'
 set -g status-right '%Y-%m-%d %H:%M '
 set -g status-right-length 50
 
 setw -g window-status-current-style 'fg=black bg=lightblue'
 setw -g window-status-current-format ' #I #W #F '
 
-setw -g window-status-style 'fg=lightblue'bg=black'
+setw -g window-status-style 'fg=lightblue bg=black'
 setw -g window-status-format ' #I #[fg=white]#W #[fg=yellow]#F '
 
-setw -g window-status-bell-style 'fg=yellow bg=lightblue 'bold'
+setw -g window-status-bell-style 'fg=yellow bg=lightblue bold'
 
 # messages
 set -g message-style 'fg=yellow bg=lightblue bold'
