Made some slight color tweaks

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,3 +1,5 @@
+# Author: johnseth97
+
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-a
@@ -17,7 +19,6 @@ bind l select-pane -R
 
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
-set -g mouse-select-pane on
 
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.config/tmux/tmux.conf
@@ -60,9 +61,9 @@ setw -g window-status-current-style 'fg=black bg=lightblue'
 setw -g window-status-current-format ' #I #W #F '
 
 setw -g window-status-style 'fg=lightblue bg=black'
-setw -g window-status-format ' #I #[fg=white]#W #[fg=yellow]#F '
+setw -g window-status-format ' #I #[fg=white]#W #[fg=black]#F '
 
-setw -g window-status-bell-style 'fg=yellow bg=lightblue bold'
+setw -g window-status-bell-style 'fg=black bg=lightblue bold'
 
 # messages
-set -g message-style 'fg=yellow bg=lightblue bold'
+set -g message-style 'fg=black bg=lightblue bold'
