changed tmux nav keys

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -11,11 +11,11 @@ bind - split-window -v
 unbind '"'
 unbind %
 
-# Move with hjkl
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+# Move with jkl;(better than hjkl)
+bind 'j' select-pane -L
+bind 'k' select-pane -D
+bind 'l' select-pane -U
+bind ';' select-pane -R
 
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
