--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -67,3 +67,24 @@ setw -g window-status-bell-style 'fg=black bg=lightblue bold'
 
 # messages
 set -g message-style 'fg=black bg=lightblue bold'
+
+# Plugins
+
+# Load TPM (Tmux Plugin Manager)
+set -g @plugin '~/.config/tmux/plugins/tpm'
+
+# Sensible defaults
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Git autofetch
+set -g @plugin 'thepante/tmux-git-autofetch'
+
+# Session persistance and restore
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# Gitmux - git branch in status bar
+set -g status-right '#(gitmux "#{pane_current_path}")'
+
+# Plugins init, must be at the bottom of the file
+run '~/.config/tmux/plugins/tpm/tpm'
