--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,9 +1,12 @@
-# Author: johnseth97
+# github.com/johnseth97/.dotfiles
 
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
+
+# Put status bar on the top
+set -g status-position top
 
 # split panes using | and -
 bind | split-window -h
@@ -23,52 +26,13 @@ set -g mouse on
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.config/tmux/tmux.conf
 
+# Set pane index to 1
+set-option -g base-index 1
+
 # don't rename windows automatically
 set-option -g allow-rename off
 
-### DESIGN TWEAKS ###
-
-# don't do anything when a 'bell' rings
-set -g visual-activity off
-set -g visual-bell off
-set -g visual-silence off
-setw -g monitor-activity off
-set -g bell-action none
-
-# clock mode
-setw -g clock-mode-color yellow
-
-# copy mode
-setw -g mode-style 'fg=black bg=blue bold'
-
-# panes
-set -g pane-border-style 'fg=blue'
-set -g pane-active-border-style 'fg=green'
-
-# statusbar
-set -g status-position top
-set -g status-justify left
-set -g status-style 'fg=lightblue'
-
-set -g status-left ''
-set -g status-left-length 10
-
-set -g status-right-style 'fg=black bg=violet'
-set -g status-right '%Y-%m-%d %H:%M '
-set -g status-right-length 50
-
-setw -g window-status-current-style 'fg=black bg=lightblue'
-setw -g window-status-current-format ' #I #W #F '
-
-setw -g window-status-style 'fg=lightblue bg=black'
-setw -g window-status-format ' #I #[fg=white]#W #[fg=black]#F '
-
-setw -g window-status-bell-style 'fg=black bg=lightblue bold'
-
-# messages
-set -g message-style 'fg=black bg=lightblue bold'
-
-# Plugins
+###### Plugins ######
 
 # Load TPM (Tmux Plugin Manager)
 set -g @plugin '~/.config/tmux/plugins/tpm'
@@ -76,15 +40,14 @@ set -g @plugin '~/.config/tmux/plugins/tpm'
 # Sensible defaults
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
-# Git autofetch
-set -g @plugin 'thepante/tmux-git-autofetch'
+# Theme
+set -g @catppuccin_flavor 'macchiato' # latte, frappe, macchiato or mocha
+set -g @catppuccin_status_background 'none'
+set -g @plugin 'catppuccin/tmux' # See https://github.com/catppuccin/tmux/tags for additional tags
 
 # Session persistance and restore
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-
-# Gitmux - git branch in status bar
-set -g status-right '#(gitmux "#{pane_current_path}")'
 
 # Plugins init, must be at the bottom of the file
 run '~/.config/tmux/plugins/tpm/tpm'
