--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -13,27 +13,20 @@ keybind = ctrl+d=new_split:right
 
 font-family = Lilex Nerd Font Mono
 
-theme = BlulocoDark
+theme = catppuccin-macchiato
+
 
 window-decoration = true
 
-# macos-titlebar-style = visible
-#
+macos-titlebar-style = hidden
 
 shell-integration-features = sudo
 
 macos-titlebar-proxy-icon = visible
 
-# macos-titlebar-visibility = hidden
-
 background-opacity = 0.75
 
 background-blur-radius = 20
 # macos-titlebar-buttons = hidden
-
-# macos-titlebar-transparency = native
-
-# title = " "
-
 
 window-save-state = always
