--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -7,11 +7,28 @@ add_newline = true
 # Increase command timeout for connections to remote folders
 command_timeout = 5000
 
-# Replace the '❯' symbol in the prompt with '➜'
-[character] # The name of the module we are configuring is 'character'
-success_symbol = '[➜](bold green)' # The 'success_symbol' segment is being set to '➜' with the color 'bold green'
 
-# Disable the package module, hiding it from the prompt completely
+# Prompt format
+format = """╭─ $all\n╰─$character """
+right_format = """$cmd_duration$time$status"""
+
+[character]
+format = "$symbol "
+success_symbol = '[❯](bold green)'
+error_symbol = '[❯](bold red)'
+
+[line_break]
+disabled = true
+
+[time]
+disabled = false
+
+[cmd_duration]
+disabled = false
+min_time = 0
+show_notifications = true
+min_time_to_notify = 45_000
+
 [package]
 disabled = false
 
@@ -24,97 +41,3 @@ disabled = false
 [sudo]
 disabled = false
 symbol = '👨🏼‍💻 '
-
-
-# Prompt format
-format = """
-$username\
-$hostname\
-$localip\
-$shlvl\
-$singularity\
-$kubernetes\
-$directory\
-$vcsh\
-$fossil_branch\
-$fossil_metrics\
-$git_branch\
-$git_commit\
-$git_state\
-$git_metrics\
-$git_status\
-$hg_branch\
-$pijul_channel\
-$docker_context\
-$package\
-$c\
-$cmake\
-$cobol\
-$daml\
-$dart\
-$deno\
-$dotnet\
-$elixir\
-$elm\
-$erlang\
-$fennel\
-$gleam\
-$golang\
-$guix_shell\
-$haskell\
-$haxe\
-$helm\
-$java\
-$julia\
-$kotlin\
-$gradle\
-$lua\
-$nim\
-$nodejs\
-$ocaml\
-$opa\
-$perl\
-$php\
-$pulumi\
-$purescript\
-$python\
-$quarto\
-$raku\
-$rlang\
-$red\
-$ruby\
-$rust\
-$scala\
-$solidity\
-$swift\
-$terraform\
-$typst\
-$vlang\
-$vagrant\
-$zig\
-$buf\
-$nix_shell\
-$conda\
-$meson\
-$spack\
-$memory_usage\
-$aws\
-$gcloud\
-$openstack\
-$azure\
-$nats\
-$direnv\
-$env_var\
-$crystal\
-$custom\
-$sudo\
-$cmd_duration\
-$line_break\
-$jobs\
-$battery\
-$time\
-$status\
-$os\
-$container\
-$shell\
-$character"""
