updated gitignore for better multi use

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 
 //Ignoring unneeded files in .config
-.config/tmux/plugins/
 
+test/**/*
+.gitconfig
+.config/tmux/plugins/
 .config/nvim.bak/
 .config/btop/
 .config/fontforge/
