Enabled renaming of windows with cappuccin
Need to explicitly set to avoid cappuccin usage of the host

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -29,8 +29,10 @@ bind r source-file ~/.config/tmux/tmux.conf
 # Set pane index to 1
 set-option -g base-index 1
 
-# don't rename windows automatically
-set-option -g allow-rename off
+# Allow renaming of windows when using catppuccin theme
+set -g @catppuccin_window_default_text " #W"
+set -g @catppuccin_window_current_text " #H"
+set -g @catppuccin_window_text " #W"
 
 ###### Plugins ######
 
