--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,4 +1,4 @@
-# The syntax is "key = value". The whitespace around the equals doesn't matter.
+,I# The syntax is "key = value". The whitespace around the equals doesn't matter.
 
 # Comments start with a `#` and are only valid on their own line.
 # Blank lines are ignored!
