--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,5 +1,3 @@
-,I# The syntax is "key = value". The whitespace around the equals doesn't matter.
-
 # Comments start with a `#` and are only valid on their own line.
 # Blank lines are ignored!
 
@@ -20,6 +18,8 @@ window-decoration = true
 macos-titlebar-style = hidden
 
 macos-titlebar-proxy-icon = visible
+
+quit-after-last-window-closed = true
 
 background-opacity = 0.75
 
