--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -34,6 +34,12 @@ set -g @catppuccin_window_default_text " #W"
 set -g @catppuccin_window_current_text " #H"
 set -g @catppuccin_window_text " #W"
 
+# Default terminal setup (fallback)
+set -g default-terminal "screen-256color"
+
+# Platform-specific overrides
+if-shell '[ "$IS_WSL" = "1" ]' "set -g default-terminal 'tmux-256color'; set-option -sa terminal-overrides ',xterm-256color:RGB'"
+
 ###### Plugins ######
 
 # Load TPM (Tmux Plugin Manager)
