modded tmux conf + nvim changes

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -31,7 +31,7 @@ set-option -g base-index 1
 
 # Allow renaming of windows when using catppuccin theme
 set -g @catppuccin_window_default_text " #W"
-set -g @catppuccin_window_current_text " #H"
+set -g @catppuccin_window_current_text " #W"
 set -g @catppuccin_window_text " #W"
 
 # Default terminal setup (fallback)
