--- a/.config/gh-dash/config.yml
+++ b/.config/gh-dash/config.yml
@@ -66,7 +66,9 @@ keybindings:
   issues: []
   prs: []
   branches: []
-repoPaths: {}
+repoPaths: {
+  dynamic-renewables-corporate/Sagepoint-Dashboard: ~/src/dynamic-dashboard
+}
 theme:
   ui:
     sectionsShowCount: true
