--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -20,6 +20,9 @@ bind 'k' select-pane -D
 bind 'l' select-pane -U
 bind ';' select-pane -R
 
+# bind leader / to search via copy mode
+bind-key / copy-mode \; send-key ?
+
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
 
