fixed bad binds

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,64 +1,103 @@
-# github.com/johnseth97/.dotfiles
-
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-# Put status bar on the top
+# status bar on top
 set -g status-position top
 
-# split panes using | and -
+# split panes with | and -
 bind | split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
 
-# Move with jkl;(better than hjkl)
-bind 'j' select-pane -L
-bind 'k' select-pane -D
-bind 'l' select-pane -U
-bind ';' select-pane -R
+# ──────── 1) Pane movement (prefix + j/k/l/;) ────────
+unbind h
+unbind j
+unbind k
+unbind l
 
-# bind leader / to search via copy mode
+bind j select-pane -L
+bind k select-pane -D
+bind l select-pane -U
+bind \; select-pane -R
+
+# ──────── 2) Pane resizing (Ctrl + j/k/l/;) ────────
+unbind -n C-h
+unbind -n C-j
+unbind -n C-k
+unbind -n C-l
+
+bind -n C-j resize-pane -L
+bind -n C-k resize-pane -D
+bind -n C-l resize-pane -U
+bind -n C-\; resize-pane -R
+
+# ──────── 3) Copy-mode (vi & emacs) scroll ────────
+unbind -T copy-mode    h
+unbind -T copy-mode    j
+unbind -T copy-mode    k
+unbind -T copy-mode    l
+unbind -T copy-mode-vi h
+unbind -T copy-mode-vi j
+unbind -T copy-mode-vi k
+unbind -T copy-mode-vi l
+
+bind -T copy-mode    j send-keys -X cursor-left
+bind -T copy-mode    k send-keys -X cursor-down
+bind -T copy-mode    l send-keys -X cursor-up
+bind -T copy-mode    \; send-keys -X cursor-right
+
+bind -T copy-mode-vi j send-keys -X cursor-left
+bind -T copy-mode-vi k send-keys -X cursor-down
+bind -T copy-mode-vi l send-keys -X cursor-up
+bind -T copy-mode-vi \; send-keys -X cursor-right
+
+# ──────── 4) Menu & choose-tree navigation ────────
+# # session/window picker (prefix+s):
+# unbind -T choose-tree Up
+# unbind -T choose-tree Down
+# unbind -T choose-tree Left
+# unbind -T choose-tree Right
+#
+# bind -T choose-tree j send-keys Left 
+# bind -T choose-tree k send-keys Down
+# bind -T choose-tree l send-keys Up
+# bind -T choose-tree \; send-keys Right
+
+# built-in popup menus:
+# unbind -T popup Up
+# unbind -T popup Down
+# unbind -T popup Left
+# unbind -T popup Right
+#
+# bind -T popup j send-keys Left
+# bind -T popup k send-keys Down
+# bind -T popup l send-keys Up 
+# bind -T popup \; send-keys Right
+
+# ──────── other bindings & plugins ────────
 bind-key / copy-mode \; send-key ?
 
-# Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
-
-# reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.config/tmux/tmux.conf
-
-# Set pane index to 1
 set-option -g base-index 1
 
-# Allow renaming of windows when using catppuccin theme
 set -g @catppuccin_window_default_text " #W"
 set -g @catppuccin_window_current_text " #W"
 set -g @catppuccin_window_text " #W"
+set -g @catppuccin_flavor 'macchiato'
+set -g @catppuccin_status_background 'none'
 
-# Default terminal setup (fallback)
 set -g default-terminal "tmux-256color"
-
-# Platform-specific overrides
 set -ga terminal-overrides ',*:Tc'
 
-###### Plugins ######
-
-# Load TPM (Tmux Plugin Manager)
+# TPM plugins
 set -g @plugin '~/.config/tmux/plugins/tpm'
-
-# Sensible defaults
 set -g @plugin 'tmux-plugins/tmux-sensible'
-
-# Theme
-set -g @catppuccin_flavor 'macchiato' # latte, frappe, macchiato or mocha
-set -g @catppuccin_status_background 'none'
-set -g @plugin 'catppuccin/tmux' # See https://github.com/catppuccin/tmux/tags for additional tags
-
-# Session persistance and restore
+set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
-# Plugins init, must be at the bottom of the file
 run '~/.config/tmux/plugins/tpm/tpm'
