fixed bash completions and tmux

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,3 +1,5 @@
+# PATH DEBUG
+run-shell "echo \$PATH > /tmp/tmux-path.log"
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-a
@@ -93,11 +95,15 @@ set -g @catppuccin_status_background 'none'
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ',*:Tc'
 
-# TPM plugins
-set -g @plugin '~/.config/tmux/plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'catppuccin/tmux'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+set-environment -g PATH "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 
-run '~/.config/tmux/plugins/tpm/tpm'
+# TPM plugins
+set -g @tpm_plugins '
+	tmux-plugins/tpm \
+	tmux-plugins/tmux-sensible \
+	catppuccin/tmux \
+	tmux-plugins/tmux-resurrect \
+	tmux-plugins/tmux-continuum \
+'
+
+run '$HOME/.config/tmux/plugins/tpm/tpm'
