--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -95,7 +95,7 @@ set -g @catppuccin_status_background 'none'
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ',*:Tc'
 
-set-environment -g PATH "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+set-environment -g PATH "/opt/homebrew/bin:/opt/homebrew/sbin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin"
 
 # TPM plugins
 set -g @tpm_plugins '
