--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -86,11 +86,11 @@ set -g mouse on
 bind r source-file ~/.config/tmux/tmux.conf
 set-option -g base-index 1
 
-set -g @catppuccin_window_default_text " #W"
-set -g @catppuccin_window_current_text " #W"
-set -g @catppuccin_window_text " #W"
-set -g @catppuccin_flavor 'macchiato'
-set -g @catppuccin_status_background 'none'
+# set -g @catppuccin_window_default_text " #W"
+# set -g @catppuccin_window_current_text " #W"
+# set -g @catppuccin_window_text " #W"
+# set -g @catppuccin_flavor 'macchiato'
+# set -g @catppuccin_status_background 'none'
 
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ',*:Tc'
@@ -101,7 +101,7 @@ set-environment -g PATH "/opt/homebrew/bin:/opt/homebrew/sbin:/usr/local/bin:/us
 set -g @tpm_plugins '
 	tmux-plugins/tpm \
 	tmux-plugins/tmux-sensible \
-	catppuccin/tmux \
+	janoamaral/tokyo-night-tmux \
 	tmux-plugins/tmux-resurrect \
 	tmux-plugins/tmux-continuum \
 '
