updated tmux conf

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -97,13 +97,27 @@ set -ga terminal-overrides ',*:Tc'
 
 set-environment -g PATH "/opt/homebrew/bin:/opt/homebrew/sbin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin"
 
-# TPM plugins
-set -g @tpm_plugins '
-	tmux-plugins/tpm \
-	tmux-plugins/tmux-sensible \
-	janoamaral/tokyo-night-tmux \
-	tmux-plugins/tmux-resurrect \
-	tmux-plugins/tmux-continuum \
-'
+# --- TPM: use ~/.config/tmux/plugins instead of ~/.tmux/plugins ---
+set-environment -g TMUX_PLUGIN_MANAGER_PATH "$HOME/.config/tmux/plugins"
 
-run '$HOME/.config/tmux/plugins/tpm/tpm'
+# Declare
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'fabioluciano/tmux-tokyo-night'
+
+### Tokyo Night Theme configuration
+set -g @theme_variation 'storm'
+set -g @theme_left_separator ''
+set -g @theme_right_separator ''
+set -g @theme_plugins 'datetime,weather,battery'
+set -g @theme_plugin_datetime_icon '📅'
+set -g @theme_plugin_weather_icon '🌦️'
+set -g @theme_transparent_status_bar 'true'
+set -g @theme_right_separator_inverse ' '
+set -g @theme_left_separator_inverse ' '
+
+
+# Initialize TPM (robust: pass the var inline; use bash)
+run "$HOME/.config/tmux/plugins/tpm/tpm"
