--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -79,19 +79,24 @@ bind -T copy-mode-vi \; send-keys -X cursor-right
 # bind -T popup l send-keys Up 
 # bind -T popup \; send-keys Right
 
-# ──────── other bindings & plugins ────────
+# Misc keybindings
 bind-key / copy-mode \; send-key ?
 
-set -g mouse on
+# Reload config
 bind r source-file ~/.config/tmux/tmux.conf
+
+# Enable mouse and set base index
+set -g mouse on
 set-option -g base-index 1
 
-# set -g @catppuccin_window_default_text " #W"
-# set -g @catppuccin_window_current_text " #W"
-# set -g @catppuccin_window_text " #W"
-# set -g @catppuccin_flavor 'macchiato'
-# set -g @catppuccin_status_background 'none'
+# Set shell and force login shell for consistent PATH in all tmux panes
+set-option -g default-shell "/usr/bin/zsh"
+set-option -g default-command "exec /usr/bin/zsh -l"
 
+# Properly propagate WSL and PATH environment variables
+set-option -g update-environment "WSL_INTEROP WSLENV PATH"
+
+# Terminal color support (critical for theme + TUI apps)
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ',*:Tc'
 
