updated tmux theme to render curves

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -114,14 +114,22 @@ set -g @plugin 'fabioluciano/tmux-tokyo-night'
 
 ### Tokyo Night Theme configuration
 set -g @theme_variation 'storm'
+
+set -g @theme_left_separator ''
+set -g @theme_right_separator ''
 set -g @theme_transparent_left_separator ''
 set -g @theme_transparent_right_separator ''
+
 set -g @theme_plugins 'datetime,weather,battery'
 set -g @theme_plugin_datetime_icon '📅'
 set -g @theme_plugin_weather_icon '🌦️'
 set -g @theme_transparent_status_bar 'true'
+
+set -g @theme_right_separator_inverse ' '
+set -g @theme_left_separator_inverse ' '
 set -g @theme_transparent_right_separator_inverse ' '
 set -g @theme_transparent_left_separator_inverse ' '
+
 
 
 # Initialize TPM (robust: pass the var inline; use bash)
